--- a/Practica1_PaginaWeb.html
+++ b/Practica1_PaginaWeb.html
@@ -42,6 +42,14 @@
 	    <br> 
 	</p>
 	
+	<ol>
+	  <font color="white">
+	      <li>Mario Bros</li>
+	      <li>Pac-Man</li>
+	      <li>Bomberman</li>
+	  </font>
+	</ol>
+	<br>
 
     </body>
 </html>
