--- a/Practica1_PaginaWeb.html
+++ b/Practica1_PaginaWeb.html
@@ -50,6 +50,29 @@
 	  </font>
 	</ol>
 	<br>
+	
+	<font size=4 color="red" face="verdana">DESCARGA O JUEGA</font><br>
+	<a href ="http://www.freepacman.org/welcome.php">JUEGO</a><br>
+	<a href ="https://itunes.apple.com/en/app/pac-man/id281656475?mt=8">DESCARGA PARA IOS </a><br>
+	<a href ="https://www.google.com/doodles/30th-anniversary-of-pac-man">JUEGO POR 30 ANIVERSARIO GOOGLE</a><br>
+	
+	<table border=1>
+	    <tr>
+	        <td><font color="white">celda 1.1</font></td>
+		<td><font color="white">celda 1.2</font></td>
+		<td><font color="white">celda 1.3</font></td>
+	    </tr>
+	    <tr>
+	        <td><font color="white">celda 2.1</font></td>
+		<td><font color="white">celda 2.2</font></td>
+		<td><font color="white">celda 2.3</font></td>
+	    </tr>
+	    <tr>
+	        <td><font color="white">celda 3.1</font></td>
+		<td><font color="white">celda 3.2</font></td>
+		<td><font color="white">celda 3.3</font></td>
+	    </tr>
+	</table>
 
     </body>
 </html>
