corregir error de bgcolor.

--- a/Practica1_PaginaWeb.html
+++ b/Practica1_PaginaWeb.html
@@ -5,7 +5,7 @@
       <title>Practica 1</title>
     </head>
     
-    <body bgcolo="black">
+    <body bgcolor="black">
       <p>
 	    <font color="yellow" size=7>PAC-MAN</font>
 	    <br>
